bug fixed, equal button is clickable and all buttons are aligned

--- a/CSS/calculator.css
+++ b/CSS/calculator.css
@@ -1,5 +1,5 @@
 @import 'main.css';
-*{
+* {
     box-sizing: border-box;
 }
 
@@ -15,18 +15,17 @@
     border-radius: 10px;
     box-shadow: 0px 1px 4px 1px rgba(128, 128, 128, 0.3), inset 0px 1px 2px rgba(71, 71, 71, 0.4);
     /* first shadow is outter shadow, second shadow is inner shadow */
-
 }
 button {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     font-weight: bolder;
+    text-shadow: 0px -1px 1px rgba(168, 168, 168, 0.5);
     text-align: center;
     margin: 10px;
     padding: 16px;
     border-radius: 8px;
     width: 5vw;
-    /* height: 50; doesn't work */
 }
 .numbers {
     background-image: linear-gradient(#fffdfd, #f0f0f0); /* gradient background color */
@@ -50,49 +49,49 @@ button {
 }
 .display {
     background-color: rgb(224, 245, 223);
-    box-shadow:inset 0px 1px 3px 1px rgba(117, 117, 117, 0.6);
+    box-shadow: inset 0px 1px 3px 1px rgba(117, 117, 117, 0.6);
     border: 7px solid rgb(73, 56, 23);
     border-radius: 10px;
     width: 27vw;
     height: 10vw;
-    margin: 10px 10px;/* thsi margin is between the display frame and edge of calculator*/
+    margin: 10px 10px; /* thsi margin is between the display frame and edge of calculator*/
     font-size: 60px;
     text-align: right;
-    padding: 20px;/* this space is the one between the numbers and display frame*/
-
+    padding: 20px; /* this space is the one between the numbers and display frame*/
 }
-.buttons{
+.buttons {
     width: 28vw;
-    position:relative;
-    /* margin doesn't work here, don't know why */
+    position: relative;
     left: 9px;
 }
-.content{
+.content {
     position: relative;
     bottom: -20px;
     font-family: digital;
     line-height: 70px;
 }
 
-.left_col{
-    /* float: left; */
+.left_col {
     position: relative;
 }
-#number_0{
+#number_0 {
     width: 12vw;
 }
-#number_equal{
-    height: 145px;
-    width: 35;
+#number_equal {
+    height: 143px;
     vertical-align: bottom;
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
+    right: 6px;
     background-image: linear-gradient(#ff8d23, #f17612);
 }
-#outcome{
+#number_equal:active {
+    background-image: linear-gradient(#f18621, #e47114);
+}
+#outcome {
     padding: 10px;
 }
-@font-face{
+@font-face {
     font-family: digital;
-    src:url("../Fonts/digital.ttf");
+    src: url('../Fonts/digital.ttf');
 }
